--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <properties>
     <java.version>17</java.version>
     <spring.boot.version>3.3.4</spring.boot.version>
-    <thymeleaf.version>3.1.2.RELEASE</thymeleaf.version>
+    <thymeleaf.version>3.1.2</thymeleaf.version>
   </properties>
 
   <dependencies>
@@ -54,29 +54,22 @@
     <dependency>
       <groupId>com.microsoft.sqlserver</groupId>
       <artifactId>mssql-jdbc</artifactId>
-      <version>11.2.2.jre8</version>
+      <version>11.2.2.jre17</version> <!-- Зміна на jre17 для Java 17 -->
     </dependency>
 
-    <!-- JUnit for testing -->
+    <!-- JUnit 5 for testing -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.9.3</version> <!-- Зміна на JUnit 5 -->
       <scope>test</scope>
-    </dependency>
-
-    <!-- Thymeleaf Spring integration -->
-    <dependency>
-      <groupId>org.thymeleaf</groupId>
-      <artifactId>thymeleaf-spring6</artifactId>
-      <version>${thymeleaf.version}</version>
     </dependency>
 
     <!-- Servlet API -->
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>4.0.1</version>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>5.0.0</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -88,7 +81,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version> <!-- Версія для уникнення попереджень -->
+        <version>3.8.1</version> <!-- Залишити версію без змін -->
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
@@ -99,7 +92,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>1.6.0</version>
+        <version>1.6.0</version> <!-- Залишити версію без змін -->
         <executions>
           <!-- npm install -->
           <execution>
