--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-spring.datasource.url=jdbc:sqlserver://vntusigmas.database.windows.net:1433;database=user_management;user=lLnmkxI09bgy95AUAtQl8uOtXUR@vntusigmas;password=XHCuWqd7Ux00JJ4j89zEwWhnz30L;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=lLnmkxI09bgy95AUAtQl8uOtXUR
-spring.datasource.password=XHCuWqd7Ux00JJ4j89zEwWhnz30L
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url=jdbc:sqlserver://vntusigmas.database.windows.net:1433;database=user_management;user=lLnmkxI09bgy95AUAtQl8uOtXUR@vntusigmas;password=XHCuWqd7Ux00JJ4j89zEwWhnz30L;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.username=lLnmkxI09bgy95AUAtQl8uOtXUR
+#spring.datasource.password=XHCuWqd7Ux00JJ4j89zEwWhnz30L
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/find_a_friend
+spring.datasource.username=postgres
+spring.datasource.password=110407
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-
-
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
