--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,18 +5,19 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Animals
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-
-#spring.datasource.url=jdbc:postgresql://localhost:5432/find_a_friend
+#PABLO DB
+#spring.datasource.url=jdbc:postgresql://localhost:5432/Animals
 #spring.datasource.username=postgres
-#spring.datasource.password=110407
+#spring.datasource.password=123
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/find_a_friend
+spring.datasource.username=postgres
+spring.datasource.password=110407
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
