--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,13 @@
       <version>${spring.boot.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.json -->
     <dependency>
       <groupId>org.glassfish</groupId>
-      <artifactId>javax.el</artifactId>
-      <version>3.0.0</version>
+      <artifactId>jakarta.json</artifactId>
+      <version>2.0.1</version>
     </dependency>
+
 
     <dependency>
       <groupId>jakarta.validation</groupId>
