--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@
 
 #PABLO DB
 spring.datasource.url=jdbc:postgresql://localhost:5432/Animals
+#spring.datasource.url=jdbc:postgresql://192.168.199.100:5432/Animals
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
